# geometry_os

./: .ai-pm-config.yaml  .coveragerc  .env.example  .geo-harness-learnings.md  .gitignore  .harness-state.json  .pre-commit-config.yaml  ACTUAL_STATUS.md  ADVANCED_FEATURES.md  AGENTS.md  AI_GUIDE.md  AI_ONBOARDING.md  ARCHITECTURE.md  BLOCKED.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PROCESS.md  COGNITIVE_DRIFT_AUDIT_REPORT.md  COMPONENT_MAPPING.md  CONSTITUTION.md  CONTRIBUTING.md  CTRM_Architecture_v10.md  CTRM_LLM_OS_FIXES_SUMMARY.md  Cargo.toml  DEMONSTRATION_PLAN.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_REPORT.md  DOCUMENTATION_UPDATE_REPORT_NATIVE_GLYPH_SHELL.md  DOCUMENTATION_UPDATE_REPORT_V2.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_VERIFICATION_REPORT.md  DREAMER_AGENT_DOCUMENTATION.md  ERROR_HANDLING_QUICKSTART.md  ERROR_HANDLING_REFACTORING_REPORT.md  ERROR_Handling_Implementation_Report.md  EVOLUTION_COMPLETE.md  GEMINI.md  GENETIC_EVOLUTION_ENHANCEMENTS.md  GEOMETRIC_TRACE_OS_SPEC.md  GEOMETRY_FS_README.md  (+407 more)
kernel/boot/: Cargo.toml  Makefile  README.md  flash_to_usb.sh  glyph_compiler.c  glyph_compiler.h  glyph_exec.c  gpu.c  gpu.h  kernel.c  pci.c  pci.h  qemu_test.sh  ring.c  ring.h  run_bare_metal.sh  start.asm  usb_watch_daemon.sh  verify_boot.sh  window_manager.c  window_manager.h
pixelflow/: README.md  pyproject.toml  test_bc4.py
pixelflow/pixelflow/: __init__.py  benchmark.py  engine.py  engine_v2.py  engine_v3.py  engine_v4.py  engine_v5.py  engine_v6.py  engine_v6b.py  export_weights.py  server.py  test_bc4.py  weight_textures.py
pixelflow/tests/: test_matmul.py
pixelflow/webgl/: index.html
systems/geos-boot/: Cargo.toml  FREEZE_MANIFEST.md
systems/glyph_boot/: Cargo.toml
systems/glyph_compiler/: Cargo.toml  OPCODES.md  README.md
systems/glyph_framework_rs/: Cargo.toml
systems/hypervisor/: Cargo.toml  __init__.py  holographic_flatten.py  memory_profiler.py
systems/infinite_map_rs/: Cargo.toml  build.rs  cargo_check_output.txt  metabolic_efficiency_demo.py
systems/mirror_engine/: .gitignore  Cargo.toml  app_loader.py  atomic_apps.py  bitmap_font.py  bootloader.py  evolution.py  evolution_results.json  genesis_injector.py  geometry_assembler.py  geometry_transpiler.py  hex_logic_runner.py  llm_mirror_bridge.py  lmstudio_thought_bridge.py  lmstudio_vram_streamer.py  mirror_link.py  security.py  self_hosting_dna.py  spatial_agent.py  system_monitor.py  the_mirror.py  thought_gateway.py  thought_logger.py  vanguard_scraper.py
systems/sisyphus/: Cargo.toml  __init__.py  compositor_bridge.py  critic.py  daemon.py  entropy_mapper.py  glass_box_bridge.py  goal_synthesizer.py  hot_swap_manager.py  kernel_rewriter.py  lm_studio_client.py  native_hilbert.py  performance_monitor.py  sisyphus_brain.py  speculative_optimizer.py  substrate_bridge.py  test_substrate_bridge.py  thought_serializer.py  token_rasterizer.py  unified_glass_bridge.py
systems/testing/: __init__.py  failure_analyzer.py  fix_suggester.py  pyproject.toml  test_runner.py  test_selector.py
systems/visual_shell/: Cargo.toml  OPENSPEC.md  __init__.py  action_history.py  adaptive_learning.py  anomaly_detection.py  ascii_gui_bridge.py  auto_recovery.py  auto_remediation.py  autonomous_loop.py  autonomous_scaling.py  capacity_planning.py  chaos_monkey.py  circuit_breaker.py  cluster_gateway.py  cluster_visualizer.py  cognitive_overlay.py  console_bridge.py  context_injector.py  cross_cluster_migration.py  distributed_tracing.py  enhanced_glyph_shell.py  event_streaming.py  evolution_engine.py  federated_state.py  file_browser.py  game_day.py  geos_commands.py  geos_terminal.py  global_awareness.py  gnb.py  governance_engine.py  gui_protocol.py  health_monitor.py  intent_based_infrastructure.py  intent_prediction.py  interactive_controls.py  live_mesh_feed.py  log_correlation.py  mesh_dashboard.py  (+16 more)
vectoros_v2/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  NEURAL_HARVESTING_WORKFLOW.md  NEURAL_STATE_MANAGER_IMPLEMENTATION_SUMMARY.md  PHASE_29_SINGULARITY_LOG.md  VectorOS_v2_Manifesto.md  demo_multi_intelligence_integration.cpp  demo_nested_gguf_simple.cpp  demo_neural_ide_simple.cpp  demo_phase36_zeropoint.cpp  demo_phase37_void.cpp  demo_phase3_features.cpp  demo_v2_gold_master.cpp  demo_v4_substrate_launcher.cpp  test_neural_ide.cpp
vectoros_v2/blueprints_gguf/: Coding_DeepSeek_Coder_V2_Lite_Instruct_Q4_K_S.json  Coding_Qwen2.5_Coder_14B_Instruct_Q4_K_M.json  Coding_deepseek_coder_1.3b_base_q4_k_m.json  Coding_deepseek_coder_33b_instruct.Q4_K_S.json  Coding_deepseek_coder_6.7b_base.Q4_K_S.json  Coding_qwen2.5_coder_7b_instruct_q4_k_m.json  Creative_GLM4.6_Qwen3_4b_Instruct_Distill_Q4_K_M.json  Creative_Phi_3_mini_4k_instruct_q4.json  Creative_Qwen3_VL_8B_Instruct_Q4_K_M.json  Creative_chatgpt_5_q8_0.json  General_GLM_4_9B_0414_Q4_K_S.json  General_Magistral_Small_2509_Q4_K_M.json  General_Mamba_Codestral_7B_v0.1_Q3_K_M.json  General_NVIDIA_Nemotron_3_Nano_30B_A3B_Q3_K_L.json  General_Qwen3_Embedding_0.6B_Q8_0.json  General_airoboros_none_resp_gpt_4o_mini_inst_gpt_4o_resp.Q4_K_S.json  General_gemma_2b.Q6_K.json  General_gemma_3_27B_it_QAT_Q4_0.json  General_geometry_cortex_v1_Q4_K_M.json  General_mmproj_model_f16.json  General_omni_fused_mass.json  General_phi_4_Q4_K_M.json  Reasoning_Cortex_v1.json  coding_GLM4.6-Qwen3-4b-Instruct-Distill-Q4_K_M_Core.json  coding_Qwen3-VL-8B-Instruct-Q4_K_M_Core.json  coding_deepseek-coder-1.3b-instruct.Q8_0_Core.json  coding_deepseek-coder-6.7b-base.Q4_K_S_Core.json  coding_qwen2.5-coder-7b-instruct-q4_k_m_Core.json  coding_sqlcoder-7b-q5_k_m_Core.json  creative_tinyllama-1.1b-chat-v1.0.Q8_0_Core.json  general_GLM-4-9B-0414-Q4_K_S_Core.json  general_Magistral-Small-2509-Q4_K_M_Core.json  general_chatgpt-5-q8_0_Core.json  general_gemma-2b.Q6_K_Core.json  general_geometry_cortex_v1-Q4_K_M_Core.json  general_mmproj-Magistral-Small-2509-F16_Core.json  general_mmproj-model-f16_Core.json
vectoros_v2/kernel/: CMakeLists.txt  binary_architect.cpp  binary_architect.h  distributed_processor.h  (+53 more)
wasm/: Cargo.toml  README.md  index.html
(+12504 files in other folders)
