[package]
name = "geometry-os"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.27"
rodio = { version = "0.20", optional = true }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = []
audio = ["rodio"]
