[package]
name = "geometry-os"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.27"
rodio = { version = "0.20", optional = true }
tiny_http = { version = "0.12", optional = true }
tungstenite = { version = "0.26", optional = true }
sha1 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = []
audio = ["rodio"]
rest-api = ["tiny_http", "tungstenite", "sha1", "base64"]
