[package]
name = "geometry_os"
version = "1.0.0"
edition = "2021"
default-run = "geometry_os"

[dependencies]
# Library deps (always available)
libc = "0.2"
serde_json = "1"
png = "0.18.1"
portable-pty = "0.9"

# GUI binary deps (only needed for native build)
minifb = { version = "0.27", optional = true }
arboard = { version = "3", optional = true }

# GPU compute deps (optional, for multicore RISC-V shader execution)
wgpu = { version = "27", optional = true }
pollster = { version = "0.4", optional = true }
anyhow = { version = "1", optional = true }

[features]
default = ["native"]
native = ["minifb", "arboard"]
gpu = ["wgpu", "pollster", "anyhow"]

[[bin]]
name = "geometry_os"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "geos-term"
path = "src/bin/geos_term.rs"
required-features = ["native"]

[[bin]]
name = "fuzzer"
path = "src/fuzzer.rs"

[[bin]]
name = "riscv_fuzzer"
path = "src/riscv_fuzzer.rs"

[[bin]]
name = "geo_mcp_server"
path = "src/mcp_server.rs"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "vm_bench"
harness = false

[[bench]]
name = "assembler_bench"
harness = false
