[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectoros"
version = "1.0.0"
description = "VectorOS - An AI-powered operating system"
authors = [
    {name = "VectorOS Team", email = "team@vectoros.org"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Operating Systems",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "requests",
    "pytest",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "bandit",
    "safety",
    "pre-commit",
    "tox",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
all = [
    "vectoros[dev,docs]",
]

[project.scripts]
vectoros = "vectoros:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["vectoros"]
known_third_party = ["numpy", "matplotlib", "pytest"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".tox",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "test_*.py",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gradient_clipping: marks tests for gradient clipping functionality",
    "gpu: marks tests that require GPU/CUDA",
    "asyncio: mark test as async (pytest-asyncio)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["vectoros"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Desktop Agent coverage configuration (80% threshold)
# Note: bridge.py requires WebSocket integration tests - excluded from unit test coverage
[tool.coverage.desktop_agent]
source = ["systems/desktop_agent"]
fail_under = 80
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/bridge.py",  # WebSocket bridge needs integration tests
]

[tool.bandit]
exclude_dirs = ["tests", "test_*", "build", "dist", ".venv", ".tox"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage

[tool.safety]
ignore = [
    "12345",  # Example vulnerability ID to ignore
]