[package]
name = "geometry_os_bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.36.1", features = ["alloc", "logger", "global_allocator", "panic_handler"] }
log = "0.4.20"

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
