[package]
name = "glyph_compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "glyph_compiler"
path = "src/lib.rs"

[[bin]]
name = "glyph_compiler"
path = "src/main.rs"

[dependencies]
spirv_headers = "1.5"
wgpu = { version = "0.19", features = ["spirv"], optional = true }
ash = { version = "0.38", default-features = false, features = ["loaded", "debug"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu"]
vulkan = ["dep:ash"]
drm = []

[dev-dependencies]
