[package]
name = "glyph_framework_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.21", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional DRM dependencies
infinite_map_rs = { path = "../infinite_map_rs", optional = true }
glyph_compiler = { path = "../glyph_compiler", optional = true }

[features]
default = []
drm = ["infinite_map_rs", "glyph_compiler"]
