[package]
name = "infinite_map_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
png = "0.17"
winit = "0.29"
wgpu = { version = "0.19", features = ["spirv"] }
pollster = "0.3"
bytemuck = { version = "1.25", features = ["derive"] }
image = "0.25"
env_logger = "0.11"
log = "0.4"
# Flash/Stage 1: Ruffle integration (desktop app style)
# Note: Ruffle uses a workspace - we include key components
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", features = ["audio", "default_compatibility_rules"], package = "ruffle_core", optional = true }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", branch = "master", package = "ruffle_render_wgpu", optional = true }
glam = "0.25" # Mathematics (vectors, matrices) for camera
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

# Phase 33: MSDF Font Atlas Generation
fontdue = "0.9"

reqwest = { version = "0.11", features = ["json"] }
libc = "0.2"
rustix = { version = "0.38", features = ["fs"] }
drm-fourcc = "2.2.0"
nix = { version = "0.27", features = ["ioctl", "fs", "process"] }
memmap2 = "0.9"
procfs = "0.16"
parking_lot = "0.12"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Phase 33.2: Zero-Copy Pipeline (dmabuf + EGL)
khronos-egl = "6.0"
drm = "0.12"

# Phase 33.3: Compressed Sensing
ndarray = "0.15"

# Phase 28: Sensory Calibration (Optional - requires ALSA dev headers on Linux)
cpal = { version = "0.15", optional = true } # Audio input/output
rustfft = { version = "6.2", optional = true } # FFT for audio analysis

# Phase 29: System Integration (Embedded Python Runtime)
pyo3 = { version = "0.20", features = ["auto-initialize", "macros"], optional = true } # Python runtime

# Phase 30: Hypervisor Integration (KVM Virtualization)
kvm-ioctls = { version = "0.24", optional = true } # Safe wrappers over KVM ioctls
kvm-bindings = { version = "0.14", optional = true } # Rust FFI bindings to KVM
virtio-queue = { version = "0.17", optional = true } # VirtIO queue implementation
virtio-bindings = { version = "0.2", optional = true } # Rust FFI bindings to virtio

# Phase 30.7: Terminal Emulation (VT100/ANSI Support)
vte = { version = "0.13", optional = true } # VT100/ANSI escape sequence parser

# Phase 31.3: Rust Clipboard Manager & RTS Integration
copypasta = "0.10" # Cross-platform clipboard access
fast_hilbert = "1.0" # Hilbert curve mapping for .rts generation
ctrlc = "3.4" # Signal handling (SIGINT)
md5 = "0.7" # Checksum for clipboard metadata
chrono = "0.4" # Timestamp generation
thiserror = "2.0.17"
notify = "8.2.0"
crossbeam-channel = "0.5.15"
base64 = "0.21" # Phase 32.5: Tile execution payload decoding
shared_memory = "0.12"
bincode = "1.3"

flate2 = "1.1.8"
crc32fast = "1.4"
tempfile = "3.24.0"

# Phase 46: ACE-RTS Cognitive System (WASM Runtime)
wasmtime = "28.0"
anyhow = "1.0"

# Phase 40.5: Stateful Hot Swapping - Dynamic module loading
libloading = "0.8"

# Phase 40: Source Crystallization - Mode B Self-Hosting
blake3 = "1.5"
toml = "0.8"
walkdir = "2.4"

# Phase 41: Internal Parser (Visual AST)
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# Phase 46: Cognitive Agents - Autonomous Source City inhabitants (Z.ai Integration)
zai-rs = "0.1" # Zhipu AI / Z.ai SDK

# PixelCPU: GPU-based virtual machine
flume = "0.11"
regex = "1.10"
byteorder = "1.5"


# Phase 43: Visual Shell Integration - WebSocket server for camera sync
tokio-tungstenite = "0.21"
futures-util = "0.3"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

# Phase 0.5: Performance Baseline - Benchmark infrastructure
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Build dependencies for SPIR-V compilation
[build-dependencies]
naga = { version = "28", features = ["wgsl-in", "spv-out"] }
serde_json = "1.0"
chrono = "0.4"

[[bench]]
name = "multi_workgroup_benchmark"
harness = false

[[bench]]
name = "fp_operations_benchmark"
harness = false

[[bench]]
name = "memory_operations_benchmark"
harness = false

[[bench]]
name = "branch_instructions_benchmark"
harness = false

[[bench]]
name = "syscall_benchmark"
harness = false

[features]
default = []
audio = ["cpal", "rustfft"]
python = ["pyo3"]
hypervisor = ["kvm-ioctls", "kvm-bindings", "virtio-queue", "virtio-bindings", "vte"]

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_udev",
    "backend_session",
    "desktop",
    "xwayland",
]

[dependencies.visual_shell]
path = "../visual_shell"
