[package]
name = "sisyphus-agent"
version = "0.1.0"
edition = "2021"
description = "Sisyphus Orchestration Agent for Geometry OS - Meta-System Guardian"
authors = ["Geometry OS Team"]
license = "MIT"

[[bin]]
name = "sisyphus-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"

# For inter-process communication with Python daemon
nix = "0.26"
libc = "0.2"

# For file watching (to detect changes)
notify = { version = "5", features = ["serde"] }