# systems/testing/pyproject.toml
[project]
name = "geometry-os-testing"
version = "0.1.0"
description = "Phase O: Continuous Testing & Validation System"
requires-python = ">=3.11"

dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "junitparser>=3.0.0",
    "coverage>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]
