[package]
name = "visual_shell"
version = "0.1.0"
edition = "2021"
description = "Visual Shell - The UI is the computer (PixelRTS v2)"
authors = ["Geometric OS Team"]

[features]
png_export = ["image"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
image = { version = "0.24", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "visual_shell_bench"
harness = false
